# ev-smart-grid-openenv

./: .env.example  .gitignore  Dockerfile  README.md  README_FRONTEND.md  baseline_test.py  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  split.py  validate-submission.sh
server/: app.py  environment.py  models.py  tasks.py  utils.py
