[project]
name = "tata-nexon-grid-env"
version = "1.0.0"
description = "Simulates EV charging in the Indian context, including grid instability and load shedding."
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "python-dotenv",
    "openenv-core",
    "httpx",
    "requests"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"